--- a/Code/UmbracoPDF.Core/UmbracoPDF.Core.csproj
+++ b/Code/UmbracoPDF.Core/UmbracoPDF.Core.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\PDFController.cs" />
+    <Compile Include="Models\PDFViewModel.cs" />
     <Compile Include="Models\File.generated.cs" />
     <Compile Include="Models\Folder.generated.cs" />
     <Compile Include="Models\Home.generated.cs" />
